[package]
name = "libstatgrab-sys"
authors = [ "Adam Flott <adam@adamflott.com>" ]
description = "Rust FFI bindings to libstatgrab"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/adamflott/libstatgrab-sys"
license = "MIT OR Apache-2.0"

links = "libstatgrab"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
